--- a/karl-franz-blog/src/Components/Header/header.css
+++ b/karl-franz-blog/src/Components/Header/header.css
@@ -5,6 +5,7 @@
     border: solid red 1px;
     display: grid;
     grid-template-columns: 101px auto;
+    flex: 100%;
 }
 .pictureDiv{
     grid-column: 1;
